src/lex_yacc/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init_exp
Rule 1     init_exp -> PROTOCOL NULL connect_exp
Rule 2     init_exp -> PROTOCOL NULL connect_exp NULL param_exp
Rule 3     connect_exp -> address_exp
Rule 4     connect_exp -> address_exp NULL port_number_block_exp
Rule 5     address_exp -> ipv4_exp
Rule 6     address_exp -> domain_exp
Rule 7     domain_exp -> domain_block_exp
Rule 8     domain_exp -> domain_block_exp COMMA domain_exp
Rule 9     domain_block_exp -> SN DOT SN
Rule 10    domain_block_exp -> domain_block_exp DOT SN
Rule 11    ipv4_exp -> ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp
Rule 12    port_number_block_exp -> number_block_exp
Rule 13    port_number_block_exp -> NOT number_block_exp
Rule 14    port_number_block_exp -> number_block_exp NOT number_block_exp
Rule 15    ipv4_number_block_exp -> number_block_exp
Rule 16    ipv4_number_block_exp -> NOT number_block_exp
Rule 17    ipv4_number_block_exp -> number_block_exp NOT number_block_exp
Rule 18    number_block_exp -> number_exp
Rule 19    number_block_exp -> number_exp COMMA number_exp
Rule 20    number_block_exp -> number_block_exp COMMA number_exp
Rule 21    number_exp -> NUMBER
Rule 22    number_exp -> NUMBER RANGE NUMBER
Rule 23    number_exp -> NUMBER RANGE NUMBER MOD NUMBER
Rule 24    param_exp -> INNER EQ SN
Rule 25    param_exp -> INNER EQ ipv4_exp
Rule 26    param_exp -> INNER EQ number_block_exp
Rule 27    param_exp -> INNER EQ SN param_exp
Rule 28    param_exp -> INNER EQ ipv4_exp param_exp
Rule 29    param_exp -> INNER EQ number_block_exp param_exp

Terminals, with rules where they appear

COMMA                : 8 19 20
DOT                  : 9 10 11 11 11
EQ                   : 24 25 26 27 28 29
INNER                : 24 25 26 27 28 29
MOD                  : 23
NOT                  : 13 14 16 17
NULL                 : 1 2 2 4
NUMBER               : 21 22 22 23 23 23
PROTOCOL             : 1 2
RANGE                : 22 23
SN                   : 9 9 10 24 27
error                : 

Nonterminals, with rules where they appear

address_exp          : 3 4
connect_exp          : 1 2
domain_block_exp     : 7 8 10
domain_exp           : 6 8
init_exp             : 0
ipv4_exp             : 5 25 28
ipv4_number_block_exp : 11 11 11 11
number_block_exp     : 12 13 14 14 15 16 17 17 20 26 29
number_exp           : 18 19 19 20
param_exp            : 2 27 28 29
port_number_block_exp : 4

Parsing method: LALR

state 0

    (0) S' -> . init_exp
    (1) init_exp -> . PROTOCOL NULL connect_exp
    (2) init_exp -> . PROTOCOL NULL connect_exp NULL param_exp

    PROTOCOL        shift and go to state 2

    init_exp                       shift and go to state 1

state 1

    (0) S' -> init_exp .



state 2

    (1) init_exp -> PROTOCOL . NULL connect_exp
    (2) init_exp -> PROTOCOL . NULL connect_exp NULL param_exp

    NULL            shift and go to state 3


state 3

    (1) init_exp -> PROTOCOL NULL . connect_exp
    (2) init_exp -> PROTOCOL NULL . connect_exp NULL param_exp
    (3) connect_exp -> . address_exp
    (4) connect_exp -> . address_exp NULL port_number_block_exp
    (5) address_exp -> . ipv4_exp
    (6) address_exp -> . domain_exp
    (11) ipv4_exp -> . ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp
    (7) domain_exp -> . domain_block_exp
    (8) domain_exp -> . domain_block_exp COMMA domain_exp
    (15) ipv4_number_block_exp -> . number_block_exp
    (16) ipv4_number_block_exp -> . NOT number_block_exp
    (17) ipv4_number_block_exp -> . number_block_exp NOT number_block_exp
    (9) domain_block_exp -> . SN DOT SN
    (10) domain_block_exp -> . domain_block_exp DOT SN
    (18) number_block_exp -> . number_exp
    (19) number_block_exp -> . number_exp COMMA number_exp
    (20) number_block_exp -> . number_block_exp COMMA number_exp
    (21) number_exp -> . NUMBER
    (22) number_exp -> . NUMBER RANGE NUMBER
    (23) number_exp -> . NUMBER RANGE NUMBER MOD NUMBER

    NOT             shift and go to state 11
    SN              shift and go to state 12
    NUMBER          shift and go to state 14

    connect_exp                    shift and go to state 4
    address_exp                    shift and go to state 5
    ipv4_exp                       shift and go to state 6
    domain_exp                     shift and go to state 7
    ipv4_number_block_exp          shift and go to state 8
    domain_block_exp               shift and go to state 9
    number_block_exp               shift and go to state 10
    number_exp                     shift and go to state 13

state 4

    (1) init_exp -> PROTOCOL NULL connect_exp .
    (2) init_exp -> PROTOCOL NULL connect_exp . NULL param_exp

    $end            reduce using rule 1 (init_exp -> PROTOCOL NULL connect_exp .)
    NULL            shift and go to state 15


state 5

    (3) connect_exp -> address_exp .
    (4) connect_exp -> address_exp . NULL port_number_block_exp

  ! shift/reduce conflict for NULL resolved as shift
    $end            reduce using rule 3 (connect_exp -> address_exp .)
    NULL            shift and go to state 16

  ! NULL            [ reduce using rule 3 (connect_exp -> address_exp .) ]


state 6

    (5) address_exp -> ipv4_exp .

    NULL            reduce using rule 5 (address_exp -> ipv4_exp .)
    $end            reduce using rule 5 (address_exp -> ipv4_exp .)


state 7

    (6) address_exp -> domain_exp .

    NULL            reduce using rule 6 (address_exp -> domain_exp .)
    $end            reduce using rule 6 (address_exp -> domain_exp .)


state 8

    (11) ipv4_exp -> ipv4_number_block_exp . DOT ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp

    DOT             shift and go to state 17


state 9

    (7) domain_exp -> domain_block_exp .
    (8) domain_exp -> domain_block_exp . COMMA domain_exp
    (10) domain_block_exp -> domain_block_exp . DOT SN

    NULL            reduce using rule 7 (domain_exp -> domain_block_exp .)
    $end            reduce using rule 7 (domain_exp -> domain_block_exp .)
    COMMA           shift and go to state 18
    DOT             shift and go to state 19


state 10

    (15) ipv4_number_block_exp -> number_block_exp .
    (17) ipv4_number_block_exp -> number_block_exp . NOT number_block_exp
    (20) number_block_exp -> number_block_exp . COMMA number_exp

    DOT             reduce using rule 15 (ipv4_number_block_exp -> number_block_exp .)
    NULL            reduce using rule 15 (ipv4_number_block_exp -> number_block_exp .)
    $end            reduce using rule 15 (ipv4_number_block_exp -> number_block_exp .)
    INNER           reduce using rule 15 (ipv4_number_block_exp -> number_block_exp .)
    NOT             shift and go to state 20
    COMMA           shift and go to state 21


state 11

    (16) ipv4_number_block_exp -> NOT . number_block_exp
    (18) number_block_exp -> . number_exp
    (19) number_block_exp -> . number_exp COMMA number_exp
    (20) number_block_exp -> . number_block_exp COMMA number_exp
    (21) number_exp -> . NUMBER
    (22) number_exp -> . NUMBER RANGE NUMBER
    (23) number_exp -> . NUMBER RANGE NUMBER MOD NUMBER

    NUMBER          shift and go to state 14

    number_block_exp               shift and go to state 22
    number_exp                     shift and go to state 13

state 12

    (9) domain_block_exp -> SN . DOT SN

    DOT             shift and go to state 23


state 13

    (18) number_block_exp -> number_exp .
    (19) number_block_exp -> number_exp . COMMA number_exp

  ! shift/reduce conflict for COMMA resolved as shift
    NOT             reduce using rule 18 (number_block_exp -> number_exp .)
    DOT             reduce using rule 18 (number_block_exp -> number_exp .)
    NULL            reduce using rule 18 (number_block_exp -> number_exp .)
    $end            reduce using rule 18 (number_block_exp -> number_exp .)
    INNER           reduce using rule 18 (number_block_exp -> number_exp .)
    COMMA           shift and go to state 24

  ! COMMA           [ reduce using rule 18 (number_block_exp -> number_exp .) ]


state 14

    (21) number_exp -> NUMBER .
    (22) number_exp -> NUMBER . RANGE NUMBER
    (23) number_exp -> NUMBER . RANGE NUMBER MOD NUMBER

    COMMA           reduce using rule 21 (number_exp -> NUMBER .)
    NOT             reduce using rule 21 (number_exp -> NUMBER .)
    DOT             reduce using rule 21 (number_exp -> NUMBER .)
    NULL            reduce using rule 21 (number_exp -> NUMBER .)
    $end            reduce using rule 21 (number_exp -> NUMBER .)
    INNER           reduce using rule 21 (number_exp -> NUMBER .)
    RANGE           shift and go to state 25


state 15

    (2) init_exp -> PROTOCOL NULL connect_exp NULL . param_exp
    (24) param_exp -> . INNER EQ SN
    (25) param_exp -> . INNER EQ ipv4_exp
    (26) param_exp -> . INNER EQ number_block_exp
    (27) param_exp -> . INNER EQ SN param_exp
    (28) param_exp -> . INNER EQ ipv4_exp param_exp
    (29) param_exp -> . INNER EQ number_block_exp param_exp

    INNER           shift and go to state 27

    param_exp                      shift and go to state 26

state 16

    (4) connect_exp -> address_exp NULL . port_number_block_exp
    (12) port_number_block_exp -> . number_block_exp
    (13) port_number_block_exp -> . NOT number_block_exp
    (14) port_number_block_exp -> . number_block_exp NOT number_block_exp
    (18) number_block_exp -> . number_exp
    (19) number_block_exp -> . number_exp COMMA number_exp
    (20) number_block_exp -> . number_block_exp COMMA number_exp
    (21) number_exp -> . NUMBER
    (22) number_exp -> . NUMBER RANGE NUMBER
    (23) number_exp -> . NUMBER RANGE NUMBER MOD NUMBER

    NOT             shift and go to state 30
    NUMBER          shift and go to state 14

    port_number_block_exp          shift and go to state 28
    number_block_exp               shift and go to state 29
    number_exp                     shift and go to state 13

state 17

    (11) ipv4_exp -> ipv4_number_block_exp DOT . ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp
    (15) ipv4_number_block_exp -> . number_block_exp
    (16) ipv4_number_block_exp -> . NOT number_block_exp
    (17) ipv4_number_block_exp -> . number_block_exp NOT number_block_exp
    (18) number_block_exp -> . number_exp
    (19) number_block_exp -> . number_exp COMMA number_exp
    (20) number_block_exp -> . number_block_exp COMMA number_exp
    (21) number_exp -> . NUMBER
    (22) number_exp -> . NUMBER RANGE NUMBER
    (23) number_exp -> . NUMBER RANGE NUMBER MOD NUMBER

    NOT             shift and go to state 11
    NUMBER          shift and go to state 14

    ipv4_number_block_exp          shift and go to state 31
    number_block_exp               shift and go to state 10
    number_exp                     shift and go to state 13

state 18

    (8) domain_exp -> domain_block_exp COMMA . domain_exp
    (7) domain_exp -> . domain_block_exp
    (8) domain_exp -> . domain_block_exp COMMA domain_exp
    (9) domain_block_exp -> . SN DOT SN
    (10) domain_block_exp -> . domain_block_exp DOT SN

    SN              shift and go to state 12

    domain_block_exp               shift and go to state 9
    domain_exp                     shift and go to state 32

state 19

    (10) domain_block_exp -> domain_block_exp DOT . SN

    SN              shift and go to state 33


state 20

    (17) ipv4_number_block_exp -> number_block_exp NOT . number_block_exp
    (18) number_block_exp -> . number_exp
    (19) number_block_exp -> . number_exp COMMA number_exp
    (20) number_block_exp -> . number_block_exp COMMA number_exp
    (21) number_exp -> . NUMBER
    (22) number_exp -> . NUMBER RANGE NUMBER
    (23) number_exp -> . NUMBER RANGE NUMBER MOD NUMBER

    NUMBER          shift and go to state 14

    number_block_exp               shift and go to state 34
    number_exp                     shift and go to state 13

state 21

    (20) number_block_exp -> number_block_exp COMMA . number_exp
    (21) number_exp -> . NUMBER
    (22) number_exp -> . NUMBER RANGE NUMBER
    (23) number_exp -> . NUMBER RANGE NUMBER MOD NUMBER

    NUMBER          shift and go to state 14

    number_exp                     shift and go to state 35

state 22

    (16) ipv4_number_block_exp -> NOT number_block_exp .
    (20) number_block_exp -> number_block_exp . COMMA number_exp

    DOT             reduce using rule 16 (ipv4_number_block_exp -> NOT number_block_exp .)
    NULL            reduce using rule 16 (ipv4_number_block_exp -> NOT number_block_exp .)
    $end            reduce using rule 16 (ipv4_number_block_exp -> NOT number_block_exp .)
    INNER           reduce using rule 16 (ipv4_number_block_exp -> NOT number_block_exp .)
    COMMA           shift and go to state 21


state 23

    (9) domain_block_exp -> SN DOT . SN

    SN              shift and go to state 36


state 24

    (19) number_block_exp -> number_exp COMMA . number_exp
    (21) number_exp -> . NUMBER
    (22) number_exp -> . NUMBER RANGE NUMBER
    (23) number_exp -> . NUMBER RANGE NUMBER MOD NUMBER

    NUMBER          shift and go to state 14

    number_exp                     shift and go to state 37

state 25

    (22) number_exp -> NUMBER RANGE . NUMBER
    (23) number_exp -> NUMBER RANGE . NUMBER MOD NUMBER

    NUMBER          shift and go to state 38


state 26

    (2) init_exp -> PROTOCOL NULL connect_exp NULL param_exp .

    $end            reduce using rule 2 (init_exp -> PROTOCOL NULL connect_exp NULL param_exp .)


state 27

    (24) param_exp -> INNER . EQ SN
    (25) param_exp -> INNER . EQ ipv4_exp
    (26) param_exp -> INNER . EQ number_block_exp
    (27) param_exp -> INNER . EQ SN param_exp
    (28) param_exp -> INNER . EQ ipv4_exp param_exp
    (29) param_exp -> INNER . EQ number_block_exp param_exp

    EQ              shift and go to state 39


state 28

    (4) connect_exp -> address_exp NULL port_number_block_exp .

    NULL            reduce using rule 4 (connect_exp -> address_exp NULL port_number_block_exp .)
    $end            reduce using rule 4 (connect_exp -> address_exp NULL port_number_block_exp .)


state 29

    (12) port_number_block_exp -> number_block_exp .
    (14) port_number_block_exp -> number_block_exp . NOT number_block_exp
    (20) number_block_exp -> number_block_exp . COMMA number_exp

    NULL            reduce using rule 12 (port_number_block_exp -> number_block_exp .)
    $end            reduce using rule 12 (port_number_block_exp -> number_block_exp .)
    NOT             shift and go to state 40
    COMMA           shift and go to state 21


state 30

    (13) port_number_block_exp -> NOT . number_block_exp
    (18) number_block_exp -> . number_exp
    (19) number_block_exp -> . number_exp COMMA number_exp
    (20) number_block_exp -> . number_block_exp COMMA number_exp
    (21) number_exp -> . NUMBER
    (22) number_exp -> . NUMBER RANGE NUMBER
    (23) number_exp -> . NUMBER RANGE NUMBER MOD NUMBER

    NUMBER          shift and go to state 14

    number_block_exp               shift and go to state 41
    number_exp                     shift and go to state 13

state 31

    (11) ipv4_exp -> ipv4_number_block_exp DOT ipv4_number_block_exp . DOT ipv4_number_block_exp DOT ipv4_number_block_exp

    DOT             shift and go to state 42


state 32

    (8) domain_exp -> domain_block_exp COMMA domain_exp .

    NULL            reduce using rule 8 (domain_exp -> domain_block_exp COMMA domain_exp .)
    $end            reduce using rule 8 (domain_exp -> domain_block_exp COMMA domain_exp .)


state 33

    (10) domain_block_exp -> domain_block_exp DOT SN .

    COMMA           reduce using rule 10 (domain_block_exp -> domain_block_exp DOT SN .)
    DOT             reduce using rule 10 (domain_block_exp -> domain_block_exp DOT SN .)
    NULL            reduce using rule 10 (domain_block_exp -> domain_block_exp DOT SN .)
    $end            reduce using rule 10 (domain_block_exp -> domain_block_exp DOT SN .)


state 34

    (17) ipv4_number_block_exp -> number_block_exp NOT number_block_exp .
    (20) number_block_exp -> number_block_exp . COMMA number_exp

    DOT             reduce using rule 17 (ipv4_number_block_exp -> number_block_exp NOT number_block_exp .)
    NULL            reduce using rule 17 (ipv4_number_block_exp -> number_block_exp NOT number_block_exp .)
    $end            reduce using rule 17 (ipv4_number_block_exp -> number_block_exp NOT number_block_exp .)
    INNER           reduce using rule 17 (ipv4_number_block_exp -> number_block_exp NOT number_block_exp .)
    COMMA           shift and go to state 21


state 35

    (20) number_block_exp -> number_block_exp COMMA number_exp .

    NOT             reduce using rule 20 (number_block_exp -> number_block_exp COMMA number_exp .)
    COMMA           reduce using rule 20 (number_block_exp -> number_block_exp COMMA number_exp .)
    DOT             reduce using rule 20 (number_block_exp -> number_block_exp COMMA number_exp .)
    NULL            reduce using rule 20 (number_block_exp -> number_block_exp COMMA number_exp .)
    $end            reduce using rule 20 (number_block_exp -> number_block_exp COMMA number_exp .)
    INNER           reduce using rule 20 (number_block_exp -> number_block_exp COMMA number_exp .)


state 36

    (9) domain_block_exp -> SN DOT SN .

    COMMA           reduce using rule 9 (domain_block_exp -> SN DOT SN .)
    DOT             reduce using rule 9 (domain_block_exp -> SN DOT SN .)
    NULL            reduce using rule 9 (domain_block_exp -> SN DOT SN .)
    $end            reduce using rule 9 (domain_block_exp -> SN DOT SN .)


state 37

    (19) number_block_exp -> number_exp COMMA number_exp .

    NOT             reduce using rule 19 (number_block_exp -> number_exp COMMA number_exp .)
    COMMA           reduce using rule 19 (number_block_exp -> number_exp COMMA number_exp .)
    DOT             reduce using rule 19 (number_block_exp -> number_exp COMMA number_exp .)
    NULL            reduce using rule 19 (number_block_exp -> number_exp COMMA number_exp .)
    $end            reduce using rule 19 (number_block_exp -> number_exp COMMA number_exp .)
    INNER           reduce using rule 19 (number_block_exp -> number_exp COMMA number_exp .)


state 38

    (22) number_exp -> NUMBER RANGE NUMBER .
    (23) number_exp -> NUMBER RANGE NUMBER . MOD NUMBER

    COMMA           reduce using rule 22 (number_exp -> NUMBER RANGE NUMBER .)
    NOT             reduce using rule 22 (number_exp -> NUMBER RANGE NUMBER .)
    DOT             reduce using rule 22 (number_exp -> NUMBER RANGE NUMBER .)
    NULL            reduce using rule 22 (number_exp -> NUMBER RANGE NUMBER .)
    $end            reduce using rule 22 (number_exp -> NUMBER RANGE NUMBER .)
    INNER           reduce using rule 22 (number_exp -> NUMBER RANGE NUMBER .)
    MOD             shift and go to state 43


state 39

    (24) param_exp -> INNER EQ . SN
    (25) param_exp -> INNER EQ . ipv4_exp
    (26) param_exp -> INNER EQ . number_block_exp
    (27) param_exp -> INNER EQ . SN param_exp
    (28) param_exp -> INNER EQ . ipv4_exp param_exp
    (29) param_exp -> INNER EQ . number_block_exp param_exp
    (11) ipv4_exp -> . ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp
    (18) number_block_exp -> . number_exp
    (19) number_block_exp -> . number_exp COMMA number_exp
    (20) number_block_exp -> . number_block_exp COMMA number_exp
    (15) ipv4_number_block_exp -> . number_block_exp
    (16) ipv4_number_block_exp -> . NOT number_block_exp
    (17) ipv4_number_block_exp -> . number_block_exp NOT number_block_exp
    (21) number_exp -> . NUMBER
    (22) number_exp -> . NUMBER RANGE NUMBER
    (23) number_exp -> . NUMBER RANGE NUMBER MOD NUMBER

    SN              shift and go to state 44
    NOT             shift and go to state 11
    NUMBER          shift and go to state 14

    ipv4_exp                       shift and go to state 45
    number_block_exp               shift and go to state 46
    ipv4_number_block_exp          shift and go to state 8
    number_exp                     shift and go to state 13

state 40

    (14) port_number_block_exp -> number_block_exp NOT . number_block_exp
    (18) number_block_exp -> . number_exp
    (19) number_block_exp -> . number_exp COMMA number_exp
    (20) number_block_exp -> . number_block_exp COMMA number_exp
    (21) number_exp -> . NUMBER
    (22) number_exp -> . NUMBER RANGE NUMBER
    (23) number_exp -> . NUMBER RANGE NUMBER MOD NUMBER

    NUMBER          shift and go to state 14

    number_block_exp               shift and go to state 47
    number_exp                     shift and go to state 13

state 41

    (13) port_number_block_exp -> NOT number_block_exp .
    (20) number_block_exp -> number_block_exp . COMMA number_exp

    NULL            reduce using rule 13 (port_number_block_exp -> NOT number_block_exp .)
    $end            reduce using rule 13 (port_number_block_exp -> NOT number_block_exp .)
    COMMA           shift and go to state 21


state 42

    (11) ipv4_exp -> ipv4_number_block_exp DOT ipv4_number_block_exp DOT . ipv4_number_block_exp DOT ipv4_number_block_exp
    (15) ipv4_number_block_exp -> . number_block_exp
    (16) ipv4_number_block_exp -> . NOT number_block_exp
    (17) ipv4_number_block_exp -> . number_block_exp NOT number_block_exp
    (18) number_block_exp -> . number_exp
    (19) number_block_exp -> . number_exp COMMA number_exp
    (20) number_block_exp -> . number_block_exp COMMA number_exp
    (21) number_exp -> . NUMBER
    (22) number_exp -> . NUMBER RANGE NUMBER
    (23) number_exp -> . NUMBER RANGE NUMBER MOD NUMBER

    NOT             shift and go to state 11
    NUMBER          shift and go to state 14

    ipv4_number_block_exp          shift and go to state 48
    number_block_exp               shift and go to state 10
    number_exp                     shift and go to state 13

state 43

    (23) number_exp -> NUMBER RANGE NUMBER MOD . NUMBER

    NUMBER          shift and go to state 49


state 44

    (24) param_exp -> INNER EQ SN .
    (27) param_exp -> INNER EQ SN . param_exp
    (24) param_exp -> . INNER EQ SN
    (25) param_exp -> . INNER EQ ipv4_exp
    (26) param_exp -> . INNER EQ number_block_exp
    (27) param_exp -> . INNER EQ SN param_exp
    (28) param_exp -> . INNER EQ ipv4_exp param_exp
    (29) param_exp -> . INNER EQ number_block_exp param_exp

    $end            reduce using rule 24 (param_exp -> INNER EQ SN .)
    INNER           shift and go to state 27

    param_exp                      shift and go to state 50

state 45

    (25) param_exp -> INNER EQ ipv4_exp .
    (28) param_exp -> INNER EQ ipv4_exp . param_exp
    (24) param_exp -> . INNER EQ SN
    (25) param_exp -> . INNER EQ ipv4_exp
    (26) param_exp -> . INNER EQ number_block_exp
    (27) param_exp -> . INNER EQ SN param_exp
    (28) param_exp -> . INNER EQ ipv4_exp param_exp
    (29) param_exp -> . INNER EQ number_block_exp param_exp

    $end            reduce using rule 25 (param_exp -> INNER EQ ipv4_exp .)
    INNER           shift and go to state 27

    param_exp                      shift and go to state 51

state 46

    (26) param_exp -> INNER EQ number_block_exp .
    (29) param_exp -> INNER EQ number_block_exp . param_exp
    (20) number_block_exp -> number_block_exp . COMMA number_exp
    (15) ipv4_number_block_exp -> number_block_exp .
    (17) ipv4_number_block_exp -> number_block_exp . NOT number_block_exp
    (24) param_exp -> . INNER EQ SN
    (25) param_exp -> . INNER EQ ipv4_exp
    (26) param_exp -> . INNER EQ number_block_exp
    (27) param_exp -> . INNER EQ SN param_exp
    (28) param_exp -> . INNER EQ ipv4_exp param_exp
    (29) param_exp -> . INNER EQ number_block_exp param_exp

    $end            reduce using rule 26 (param_exp -> INNER EQ number_block_exp .)
    COMMA           shift and go to state 21
    DOT             reduce using rule 15 (ipv4_number_block_exp -> number_block_exp .)
    NOT             shift and go to state 20
    INNER           shift and go to state 27

    param_exp                      shift and go to state 52

state 47

    (14) port_number_block_exp -> number_block_exp NOT number_block_exp .
    (20) number_block_exp -> number_block_exp . COMMA number_exp

    NULL            reduce using rule 14 (port_number_block_exp -> number_block_exp NOT number_block_exp .)
    $end            reduce using rule 14 (port_number_block_exp -> number_block_exp NOT number_block_exp .)
    COMMA           shift and go to state 21


state 48

    (11) ipv4_exp -> ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp . DOT ipv4_number_block_exp

    DOT             shift and go to state 53


state 49

    (23) number_exp -> NUMBER RANGE NUMBER MOD NUMBER .

    COMMA           reduce using rule 23 (number_exp -> NUMBER RANGE NUMBER MOD NUMBER .)
    NOT             reduce using rule 23 (number_exp -> NUMBER RANGE NUMBER MOD NUMBER .)
    DOT             reduce using rule 23 (number_exp -> NUMBER RANGE NUMBER MOD NUMBER .)
    NULL            reduce using rule 23 (number_exp -> NUMBER RANGE NUMBER MOD NUMBER .)
    $end            reduce using rule 23 (number_exp -> NUMBER RANGE NUMBER MOD NUMBER .)
    INNER           reduce using rule 23 (number_exp -> NUMBER RANGE NUMBER MOD NUMBER .)


state 50

    (27) param_exp -> INNER EQ SN param_exp .

    $end            reduce using rule 27 (param_exp -> INNER EQ SN param_exp .)


state 51

    (28) param_exp -> INNER EQ ipv4_exp param_exp .

    $end            reduce using rule 28 (param_exp -> INNER EQ ipv4_exp param_exp .)


state 52

    (29) param_exp -> INNER EQ number_block_exp param_exp .

    $end            reduce using rule 29 (param_exp -> INNER EQ number_block_exp param_exp .)


state 53

    (11) ipv4_exp -> ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp DOT . ipv4_number_block_exp
    (15) ipv4_number_block_exp -> . number_block_exp
    (16) ipv4_number_block_exp -> . NOT number_block_exp
    (17) ipv4_number_block_exp -> . number_block_exp NOT number_block_exp
    (18) number_block_exp -> . number_exp
    (19) number_block_exp -> . number_exp COMMA number_exp
    (20) number_block_exp -> . number_block_exp COMMA number_exp
    (21) number_exp -> . NUMBER
    (22) number_exp -> . NUMBER RANGE NUMBER
    (23) number_exp -> . NUMBER RANGE NUMBER MOD NUMBER

    NOT             shift and go to state 11
    NUMBER          shift and go to state 14

    ipv4_number_block_exp          shift and go to state 54
    number_block_exp               shift and go to state 10
    number_exp                     shift and go to state 13

state 54

    (11) ipv4_exp -> ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp .

    NULL            reduce using rule 11 (ipv4_exp -> ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp .)
    $end            reduce using rule 11 (ipv4_exp -> ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp .)
    INNER           reduce using rule 11 (ipv4_exp -> ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp DOT ipv4_number_block_exp .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for NULL in state 5 resolved as shift
WARNING: shift/reduce conflict for COMMA in state 13 resolved as shift
